Serving generated assets from an assets directory, in URL space /a

--- a/views/dial.html
+++ b/views/dial.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>Dialling!</title>
+
+    <link rel="stylesheet" href="a/style.css"/>
   </head>
   <h1>Dialing hell, yeah</h1>
   <div id='heads'>
   </div>
   
+  <script src="a/app.min.js"></script>
 </html>
