Adding a dialing screen.

--- a/views/dial.html
+++ b/views/dial.html
@@ -2,11 +2,15 @@
   <head>
     <title>Dialling!</title>
 
-    <link rel="stylesheet" href="a/style.css"/>
+    <link rel="stylesheet" href="/a/style.css"/>
   </head>
-  <h1>Dialing hell, yeah</h1>
-  <div id='heads'>
+  <div id='state'>
+    <h1>Dialing hell, yeah</h1>
+    <div id='heads'>
+    </div>
+    
+    <button class='loggedOut' id='login'>Log in</button>
+    <button class='loggedIn' id='dial'>Dial</button>
   </div>
-  
-  <script src="a/app.min.js"></script>
+  <script src="/a/app.min.js"></script>
 </html>
