Moved app-server.js to be server specific.
Started adding templates in for views.

--- a/views/dial.html
+++ b/views/dial.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Dialling!</title>
+    <title>Dialling from <%= config.get('title') %></title>
 
     <link rel="stylesheet" href="/a/style.css"/>
   </head>
   <div id='state'>
-    <h1>Dialing hell, yeah</h1>
+    <h1>Dialing from <%= config.get('title') %></h1>
     <div id='heads'>
     </div>
     
