--- a/views/extension.html
+++ b/views/extension.html
@@ -1,17 +1,17 @@
 <html>
   <head>
-    <title>Dialling from <%= config.get('title') %></title>
+    <title><%= config.get('title') %> Browser Extension</title>
 
     <link rel='stylesheet' href='/a/style.css'/>
   </head>
   <div id='state'>
     
-    <h1>Calling from <%= config.get('title') %></h1>
+    <h1><%= config.get('title') %> Browser Extension</h1>
 
     <div class='loggedOut' id='loginBox'>
       <div>
         <label for='callerId'>Username</label>
-        <input type='text' id='callerId'/>
+        <input type='text' id='calleeId'/>
         <span class='domain'>@<%= config.get('domain') %></span>
         <input type='hidden' id='domain' value='<%= config.get("domain") %>'/>
       </div>
@@ -19,10 +19,11 @@
         <label for='password'>Password</label>
         <input type='password' id='password' name='password'/>
       </div>
-      <button id='login'>Log in</button>
+      <button id='loginForRealz'>Log in</button>
+
     </div>
 
-    <div class='loggedIn' id='dialBox'>
+    <div class='loggedIn' id='loginBox'>
       <label for='calleeId'>Call</label>
       <% if (!!calleeId) { %>
         <input type='input' name='calleeId' id='calleeId' value='<%= calleeId%>' disabled='true'/>
@@ -31,9 +32,6 @@
       <% } %>
       <button id='dial'>Dial</button>
     </div>
-
-
-
     
   </div>
   <script src="/a/app.min.js"></script>
