--- a/views/extension.html
+++ b/views/extension.html
@@ -23,7 +23,7 @@
 
     </div>
 
-    <div class='loggedIn' id='loginBox'>
+    <div class='loggedIn' id='dialBox'>
       <label for='calleeId'>Call</label>
       <% if (!!calleeId) { %>
         <input type='input' name='calleeId' id='calleeId' value='<%= calleeId%>' disabled='true'/>
