End to end through one server.

--- a/views/extension.html
+++ b/views/extension.html
@@ -35,4 +35,5 @@
     
   </div>
   <script src="/a/app.min.js"></script>
+  <script src="//static.opentok.com/webrtc/v2.2/js/opentok.min.js" type="text/javascript" charset="utf-8"></script>
 </html>
