WIP, but local calling between two localhost servers.

--- a/views/register.html
+++ b/views/register.html
@@ -19,7 +19,7 @@
         <label for='password'>Password</label>
         <input type='password' id='password' name='password'/>
       </div>
-      <button id='loginForWebsocket'>Log in</button>
+      <button id='loginForRealz'>Log in</button>
 
     </div>
 
