output to public/ not public/a

--- a/public/style.css
+++ b/public/style.css
@@ -2,4 +2,4 @@
 #state .loggedOut{display:none}
 #state.loggedIn .loggedIn{display:block}
 #state .loggedIn{display:none}
-h1{color:#008000}
+h1{color:#f00}
