Update styles and use public folder

--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -1,6 +1,52 @@
 @import app-behavior
 
+body {
+  margin: 0px;
+  background: #2c3e50;
+}
+
+header {
+  padding: 20px;
+  background: #bdc3c7;
+  border-bottom: 1px solid #7f8c8d;
+}
 
 h1 {
   color: theme-color;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 100;
+}
+
+#state > div {
+  padding: 20px;
+}
+
+#state input {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
+  display: block;
+  padding: 10px;
+  font-size: 18px;
+  margin:0 auto 10px;
+}
+
+#state button {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
+  display: block;
+  padding: 15px;
+  font-size: 18px;
+  border: none;
+  border-bottom: solid 2px #bdc3c7;
+  background: #ecf0f1;
+}
+
+#state button:hover {
+  background: #bdc3c7;
+  cursor:pointer;
 }
