More styling for video elems

--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -50,3 +50,20 @@ h1 {
   background: #bdc3c7;
   cursor:pointer;
 }
+
+div#call {
+  width:800px;
+  height:600px;
+  position:relative;
+  margin: 0 auto;
+}
+
+div#call > div {
+  position:absolute;
+}
+
+div#call #me {
+  bottom: 20px;
+  right: 20px;
+  border: 5px solid;
+}
