--- a/views/extension.html
+++ b/views/extension.html
@@ -31,6 +31,10 @@
     </div>
     
   </div>
+  <div id="call">
+    <div id="them"></div>
+    <div id="me"></div>
+  </div>
   <script src="/a/app.min.js"></script>
   <script src="//static.opentok.com/webrtc/v2.2/js/opentok.min.js" type="text/javascript" charset="utf-8"></script>
 </html>
