--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,6 @@ h1{color:#34495e;margin:0;padding:0;text-align:center;font-family:sans-serif;fon
 #state input{width:100%;max-width:300px;margin:0 auto;display:block;padding:10px;font-size:18px;margin:0 auto 10px}
 #state button{width:100%;max-width:300px;margin:0 auto;display:block;padding:15px;font-size:18px;border:none;border-bottom:solid 2px #bdc3c7;background:#ecf0f1}
 #state button:hover{background:#bdc3c7;cursor:pointer}
+div#call{width:800px;height:600px;position:relative;margin:0 auto}
+div#call > div{position:absolute}
+div#call #me{bottom:20px;right:20px;border:5px solid}
